changes images src

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
         </header>
         <div class="hero_section_container">
-            <img class="hero_section_logo" src="/img/8313a97515fcb0447d2d77c276532a511583262271.png"
+            <img class="hero_section_logo" src="./img/8313a97515fcb0447d2d77c276532a511583262271.png"
                 alt="Zomato logo" />
             <h1 class="hero_section_title">
                 Find the best restaurants, cafés and bars in India
@@ -37,7 +37,7 @@
     </section>
 
     <section class="container location_collection">
-        <h2 class="location_collection_title">Popular locations in <img src="/img/in.png" />
+        <h2 class="location_collection_title">Popular locations in <img src="./img/in.png" />
             <span>India</span>
         </h2>
         <p class="location_collection_description">From swanky upscale restaurants to the cosiest hidden gems serving
@@ -308,168 +308,168 @@
         <div class="states_container">
             <div class="card">
                 <div class="country">
-                    <img src="/img/in.png" alt="India">
+                    <img src="./img/in.png" alt="India">
                     <h5>India</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/au.png" alt="Australia">
+                    <img src="./img/au.png" alt="Australia">
                     <h5>Australia</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/br.png" alt="Brasil">
+                    <img src="./img/br.png" alt="Brasil">
                     <h5>Brasil</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/ca.png" alt="Canada">
+                    <img src="./img/ca.png" alt="Canada">
                     <h5>Canada</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/cl.png" alt="Chile">
+                    <img src="./img/cl.png" alt="Chile">
                     <h5>Chile</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/cz.png" alt="Czech Republic">
+                    <img src="./img/cz.png" alt="Czech Republic">
                     <h5>Czech Republic</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/id.png" alt="Indonesia">
+                    <img src="./img/id.png" alt="Indonesia">
                     <h5>Indonesia</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/ie.png" alt="Ireland">
+                    <img src="./img/ie.png" alt="Ireland">
                     <h5>Ireland</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/it.png" alt="Italy">
+                    <img src="./img/it.png" alt="Italy">
                     <h5>Italy</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/lb.png" alt="Lebanon">
+                    <img src="./img/lb.png" alt="Lebanon">
                     <h5>Lebanon</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/my.png" alt="Malaysia">
+                    <img src="./img/my.png" alt="Malaysia">
                     <h5>Malaysia</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/nz.png" alt="New Zealand">
+                    <img src="./img/nz.png" alt="New Zealand">
                     <h5>New Zealand</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/ph.png" alt="Philippines">
+                    <img src="./img/ph.png" alt="Philippines">
                     <h5>Philippines</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/pl.png" alt="Poland">
+                    <img src="./img/pl.png" alt="Poland">
                     <h5>Poland</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/pt.png" alt="Portugal">
+                    <img src="./img/pt.png" alt="Portugal">
                     <h5>Portugal</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/qa.png" alt="Qatar">
+                    <img src="./img/qa.png" alt="Qatar">
                     <h5>Qatar</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/sg.png" alt="Singapore">
+                    <img src="./img/sg.png" alt="Singapore">
                     <h5>Singapore</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/sk.png" alt="Slovakia">
+                    <img src="./img/sk.png" alt="Slovakia">
                     <h5>Slovakia</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/za.png" alt="Slovakia">
+                    <img src="./img/za.png" alt="Slovakia">
                     <h5>South Africa</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/lk.png" alt="Slovakia">
+                    <img src="./img/lk.png" alt="Slovakia">
                     <h5>Sri Lanka</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/tr.png" alt="Slovakia">
+                    <img src="./img/tr.png" alt="Slovakia">
                     <h5>Turkey</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/ae.png" alt="Slovakia">
+                    <img src="./img/ae.png" alt="Slovakia">
                     <h5>UAE</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/gb.png" alt="Slovakia">
+                    <img src="./img/gb.png" alt="Slovakia">
                     <h5>United Kingdom</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
             </div>
             <div class="card">
                 <div class="country">
-                    <img src="/img/us.png" alt="Slovakia">
+                    <img src="./img/us.png" alt="Slovakia">
                     <h5>United States</h5>
                 </div>
                 <i class="fa-solid fa-chevron-right"></i>
@@ -481,10 +481,10 @@
 
     <section class="footer_section">
         <div class="footer_top_section">
-            <div class="footer_logo"><img src="/img/b40b97e677bc7b2ca77c58c61db266fe1603954218.png" /></div>
+            <div class="footer_logo"><img src="./img/b40b97e677bc7b2ca77c58c61db266fe1603954218.png" /></div>
             <div class="footer_top_right">
                 <div class="dropdown">
-                    <img src="/img/in.png" />
+                    <img src="./img/in.png" />
                     <p>India</p>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
@@ -547,8 +547,8 @@
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 </div>
                 <div class="app_download">
-                    <a href="#"><img src="/img/9f0c85a5e33adb783fa0aef667075f9e1556003622.png" /></a>
-                    <a href=""><img src="/img/23e930757c3df49840c482a8638bf5c31556001144.png" /></a>
+                    <a href="#"><img src="./img/9f0c85a5e33adb783fa0aef667075f9e1556003622.png" /></a>
+                    <a href=""><img src="./img/23e930757c3df49840c482a8638bf5c31556001144.png" /></a>
                 </div>
             </div>
         </div>
@@ -562,7 +562,7 @@
     </section>
 
 
-    <script src="index.js"></script>
+    <script src=".index.js"></script>
 </body>
 
 </html>
